fix overflow

--- a/client/src/styles/_canvas.scss
+++ b/client/src/styles/_canvas.scss
@@ -156,6 +156,8 @@ body #app * {
   .grid-layout-variant > & {
     height: 100%;
     max-height: 100%;
+    // min-width: unset;
+    // width: 100%;
 
     display: flex;
     flex-direction: column;
@@ -163,7 +165,7 @@ body #app * {
     justify-content: flex-start;
     align-items: flex-start;
 
-    overflow-x: scroll;
+    // overflow: scroll;
   }
 }
 
